--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_4">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/forsmå_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Helter for de minste</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
@@ -180,10 +180,10 @@
       </div> -->
     </div>
     <!-- --OVERLAY BLOCKS -->
-
-    <div class="overlayhelter">
+    <!-- --1. Superhelter -->
+    <div class="overlayhelter overlayhelter_1">
       <div class="overlayhelter-block">
-        <button class="close-button">&#10006;</button>
+        <button class="close-button close-button_1">&#10006;</button>
         <div class="overlayhelter-textblock">
 
 
@@ -244,7 +244,207 @@
       </div>
     </div>
 
+    <!-- --2. Populaere spillfigurer -->
+    <div class="overlayhelter overlayhelter_2">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_2">&#10006;</button>
+        <div class="overlayhelter-textblock">
 
+
+
+
+          <h2 class="overlayhelter-title">Populære spillfigurer og moderne trender</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Trendy helter fra moderne spill</h3>
+              <p class="overlayhelter-textblock-subtitle-text">For ekte fans av populære moderne spill har vi karakterer
+                som vil imponere barna dine! Blant dem er helter fra det
+                populære spillet Among Us, mystiske Huggy Wuggy og Kissy Missy, samt den skumle Siren Head – perfekt for
+                de som liker
+                uvanlige eventyr!</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/huggy_overlay.png" alt="Huggy Wuggy">
+                  <p>Huggy Wuggy</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/kissy_overlay.png" alt="Kissy Missy">
+                  <p>Kissy Missy</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/batman_overlay.png" alt="Siren Head">
+                  <p>Siren Head</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/amongusgull_overlay.png" alt="Among Us gul">
+                  <p>Among Us gul</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/amongusbla_overlay.png" alt="Among Us blå">
+                  <p>Among Us blå</p>
+                </div>
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- --3. Karakterer fra barnefilmer og eventyr -->
+    <div class="overlayhelter overlayhelter_3">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_3">&#10006;</button>
+        <div class="overlayhelter-textblock">
+
+
+
+
+          <h2 class="overlayhelter-title">Karakterer fra barnefilmer og eventyr</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Magien i filmer og eventyr</h3>
+              <p class="overlayhelter-textblock-subtitle-text">Barna elsker eventyrlige verdener, og vi kan bringe dem
+                direkte til festen din! Snømannen
+                Olaf, prinsessene Elsa og Anna fra "Frost", samt den kjente rampete Grinchen – ideelle karakterer for
+                små drømmere og
+                eventyrlige fester</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/olaf_overlay.png" alt="Olaf">
+                  <p>Olaf</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/grinch_overlay.png" alt="Grinch">
+                  <p>Grinch</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/elsa_overlay.png" alt="Elsa">
+                  <p>Elsa</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/anna_overlay.png" alt="Anna">
+                  <p>Anna</p>
+                </div>
+
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- --4. Helter for de minste -->
+    <div class="overlayhelter overlayhelter_4">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_4">&#10006;</button>
+        <div class="overlayhelter-textblock">
+
+
+
+
+          <h2 class="overlayhelter-title">Helter for de minste</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Vennerlige og søte helter for de små</h3>
+              <p class="overlayhelter-textblock-subtitle-text">Skånsomme og gode figurer som bringer mye glede til
+                festen! Paw Patrols modige Sky og morsomme Marshall, samt den
+                sjarmerende Enhjørningen skaper en fantastisk atmosfære for de yngste gjestene.</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/sky_overlay.png" alt="Sky (Paw Patrol)">
+                  <p>Sky (Paw Patrol)</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/marshal_overlay.png" alt="Marshall (Paw Patrol)">
+                  <p>Marshall (Paw Patrol)</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/enhjørning_overlay.png" alt="Enhjørning">
+                  <p>Enhjørning</p>
+                </div>
+
+
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -264,7 +464,7 @@
           <p>Barnefest fotograf</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block overlay">
+        <div class="tilleg-help-block overlay tilleg-help-block_1">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Vår fotograf kan fange viktige øyeblikk og følelsar hjå barn og
               deira foreldre, og lage kvalitetsrike og
@@ -272,7 +472,8 @@
             <p class="tilleg_item-description_price">500 kr pr 1 time
             </p>
           </div>
-          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefest fotograf">
+          <div class="tilleg_itemblock"><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefest fotograf">
+          </div>
         </div>
       </li>
       <!-- -2 -->
@@ -281,14 +482,16 @@
           <p>Såpeboble</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block overlay">
+        <div class="tilleg-help-block overlay tilleg-help-block_2">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Ein såpeboblegenerator er ein innretning som blir brukt til å lage
               såpebobler. Dei blir ofte brukt til
               leik og underhaldning.</p>
-            <p class="tilleg_item-description_price">400 kr
+            <p class="tilleg_item-description_price">fra 500 kr
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Såpeboble">
+          </div>
+          <div class="tilleg_itemblock"><img class="tilleg_item-img" src="./i/img/såpebobleshow.jpg" alt="Såpeboble">
+          </div>
         </div>
       </li>
       <!-- -3 -->
@@ -297,7 +500,7 @@
           <p>Glittertatoveringen</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block overlay">
+        <div class="tilleg-help-block overlay tilleg-help-block_3">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som brukast med
               lim
@@ -305,7 +508,7 @@
               er populære til festleg huddekorasjon.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time
             </p>
-            <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (20 barna)
+            <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (10 barn)
             </p>
           </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Glittertatoveringen">
         </div>
@@ -316,14 +519,14 @@
           <p>Ansiktsmaling</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block">
+        <div class="tilleg-help-block overlay tilleg-help-block_4">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar på huda, er trygt, lett
               å
               påføre, og vaskast bort med vatn.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time / 50-100 kr pr ein person
             </p>
-            <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (ca. 8 barn)
+            <p class="tilleg_item-description_price_second">Bursdag: 700 kr pr 1 time (ca. 8 barn)
             </p>
           </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Ansiktsmaling">
         </div>
@@ -333,7 +536,16 @@
         <div class="tilleg_item-bg tilleg_item-bg_5">
           <p>Klistremerker for barn</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Klistremerker for barn">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_5">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Flott tilleg til festen, dei gir gjestane noko morosamt å ta med
+              seg heim som minne</p>
+            <p class="tilleg_item-description_price">betale av deltakarar
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Klistremerker for barn">
+        </div>
+
       </li>
       <!-- -6 -->
       <li class="tilleg_list_frame tsx">
@@ -341,7 +553,7 @@
           <p>Tegning med maling for minne</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block">
+        <div class="tilleg-help-block overlay tilleg-help-block_6">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden
               rundt
@@ -358,35 +570,89 @@
         <div class="tilleg_item-bg tilleg_item-bg_7">
           <p>Barnefrisør</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefrisør">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_7">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden
+              rundt
+              bursdagsfeiringen og kan vere ein
+              personlig og
+              meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
+            <p class="tilleg_item-description_price">frå 250 kr
+            </p>
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefrisør">
       </li>
       <!-- -8 -->
       <li class="tilleg_list_frame te">
         <div class="tilleg_item-bg tilleg_item-bg_8">
           <p>Tilbehør</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Tilbehør">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_8">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden
+              rundt
+              bursdagsfeiringen og kan vere ein
+              personlig og
+              meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
+            <p class="tilleg_item-description_price">frå 250 kr
+            </p>
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Tilbehør">
       </li>
       <!-- -9 -->
       <li class="tilleg_list_frame tpin">
         <div class="tilleg_item-bg tilleg_item-bg_9">
           <p>Pinjata</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Pinjata">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_9">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden
+              rundt
+              bursdagsfeiringen og kan vere ein
+              personlig og
+              meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
+            <p class="tilleg_item-description_price">frå 250 kr
+            </p>
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Pinjata">
       </li>
       <!-- -10 -->
       <li class="tilleg_list_frame tfot">
         <div class="tilleg_item-bg tilleg_item-bg_10">
           <p>Fotosone</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Fotosone">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_10">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Dette er vanlegvis område som blir oppretta på arrangement som
+              bursdag, festar, bryllaup eller festivalar der folk kan
+              ta bilete
+            </p>
+            <p class="tilleg_item-description_price">500 kr
+            </p>
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Fotosone">
       </li>
       <!-- -11 -->
       <li class="tilleg_list_frame tbal">
         <div class="tilleg_item-bg tilleg_item-bg_11">
           <p>Baloongar</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Baloongar">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block overlay tilleg-help-block_11">
+          <div class="tilleg_item-description">
+            <p class="tilleg_item-description_text">Ballongar kan koma i ulike fargar, former og storleikar, og dei blir
+              ofte brukt til å skape ein festleg atmosfære og
+              dekorere rommet.</p>
+            <p class="tilleg_item-description_price">Fest: fra 300 kr
+            </p>
+            <p class="tilleg_item-description_price_second">Bursdag: fra 350 kr
+            </p>
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Baloongar">
       </li>
 
 
