--- a/src/index.html
+++ b/src/index.html
@@ -139,37 +139,37 @@
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_2">
-        <img class="heroes_grid_block_img heroes_grid_block_img_2" src="./i/img/patrol_transp.png" alt="ex">
+        <img class="heroes_grid_block_img heroes_grid_block_img_2" src="./i/img/among_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Populære spillfigurer og moderne trender</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_3">
-        <img class="heroes_grid_block_img heroes_grid_block_img_3" src="./i/img/pirat_transp.png" alt="ex">
+        <img class="heroes_grid_block_img heroes_grid_block_img_3" src="./i/img/eventyr_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Karakterer fra barnefilmer og eventyr</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_4">
-        <img class="heroes_grid_block_img" src="./i/img/forsmå_transp.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/patrol_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Helter for de minste</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_5">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/pirat_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Sjøeventyr</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_6">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/store_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Store kostymer</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_7">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/sqwid_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Kaptein</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
@@ -433,6 +433,196 @@
                   <img src="./i/img/enhjørning_overlay.png" alt="Enhjørning">
                   <p>Enhjørning</p>
                 </div>
+
+
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- --5. Sjøeventyr -->
+    <div class="overlayhelter overlayhelter_5">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_5">&#10006;</button>
+        <div class="overlayhelter-textblock">
+
+
+
+
+          <h2 class="overlayhelter-title">Sjøeventyr</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Kapteinen for sjøeventyr</h3>
+              <p class="overlayhelter-textblock-subtitle-text">Hvis barnet ditt drømmer om sjøeventyr, inviter Kaptein
+                Sabeltann til festen! Hans historier om skip og skattejakt vil
+                fengsle alle små pirater.</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/pirat_transp.png" alt="Kaptein Sabeltann">
+                  <p>Kaptein Sabeltann</p>
+                </div>
+
+
+
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- --6. Store kostymer -->
+    <div class="overlayhelter overlayhelter_6">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_6">&#10006;</button>
+        <div class="overlayhelter-textblock">
+
+
+
+
+          <h2 class="overlayhelter-title">Store kostymer</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Morsomme og fargerike store kostymer</h3>
+              <p class="overlayhelter-textblock-subtitle-text">Disse gigantiske karakterene fanger barnas oppmerksomhet
+                og gir ekte begeistring. De er perfekte for store arrangementer
+                og fotoshoots. Takket være deres fargerike utseende og størrelse skaper store kostymer en uforglemmelig
+                atmosfære av
+                glede og moro</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/boojenta_overlay.png" alt="Bunny Boo (jenta)">
+                  <p>Bunny Boo (jenta)</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/boogutten_overlay.png" alt="Bunny Boo (gutten)">
+                  <p>Bunny Boo (gutten)</p>
+                </div>
+
+
+
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- --7. Kaptein -->
+    <div class="overlayhelter overlayhelter_7">
+      <div class="overlayhelter-block">
+        <button class="close-button close-button_7">&#10006;</button>
+        <div class="overlayhelter-textblock">
+
+
+
+
+          <h2 class="overlayhelter-title">Kaptein</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
+          </div>
+
+
+          <div class="maingrid-for-900">
+
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Spennande og mystiske karakterar frå den verdskjende serien
+              </h3>
+              <p class="overlayhelter-textblock-subtitle-text">Gruppa Kaptein består av den kjende hovudpersonen og tre
+                figurar i raude drakter med masker. Dei skaper ei intens og
+                fascinerande stemning som passar perfekt for arrangement der ein ønskjer noko både moderne og
+                gjenkjenneleg. Takket vere
+                det ikoniske uttrykket blir dette eit uforgløymeleg innslag som fangar merksemda til både vaksne og
+                ungdom.</p>
+            </div>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/sqwid1_overlay.png" alt="Helten 1">
+                  <p>Helten 1</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/sqwid2_overlay.png" alt="Helten 2">
+                  <p>Helten 2</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/sqwid3_overlay.png" alt="Helten 3">
+                  <p>Helten 3</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/sqwid4_overlay.png" alt="Helten 4">
+                  <p>Helten 4</p>
+                </div>
+
 
 
               </div>
