--- a/src/index.html
+++ b/src/index.html
@@ -134,50 +134,40 @@
       <div class="heroes_grid_block heroes_grid_block_1">
         <img class="heroes_grid_block_img" src="./i/img/superhelter_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Superhelter</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
+
         </>
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_2">
         <img class="heroes_grid_block_img heroes_grid_block_img_2" src="./i/img/among_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Populære spillfigurer og moderne trender</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_3">
         <img class="heroes_grid_block_img heroes_grid_block_img_3" src="./i/img/eventyr_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Karakterer fra barnefilmer og eventyr</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_4">
         <img class="heroes_grid_block_img" src="./i/img/patrol_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Helter for de minste</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_5">
         <img class="heroes_grid_block_img" src="./i/img/pirat_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Sjøeventyr</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_6">
         <img class="heroes_grid_block_img" src="./i/img/store_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Store kostymer</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_7">
         <img class="heroes_grid_block_img" src="./i/img/sqwid_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Kaptein</h3>
-        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
-      <!-- <div class="heroes_grid_block heroes_grid_block_7">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Disney</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
-      </div> -->
+
     </div>
     <!-- --OVERLAY BLOCKS -->
     <!-- --1. Superhelter -->
@@ -1104,19 +1094,15 @@
 
 
   <!-- --FEEDBACK -->
+
+
   <div class="feedback">
     <h2 class="feedback_title">Tilbakemeldinger</h2>
-    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <div class="feedback_shape">
-      <p class="feedback_text">Vi er glade for å bringe glede til barna dykkar!</p>
+    <div class="feedback_grid">
+      <img class="feedback_img" src="./i/img/feedback.jpg" alt=""><img class="feedback_img" src="./i/img/feedback.jpg"
+        alt=""><img class="feedback_img" src="./i/img/feedback.jpg" alt="">
     </div>
   </div>
-
-
 
   <!-- --FOOTER -->
   <div class="footer">
@@ -1160,7 +1146,6 @@
       src="./i/img/kontaktbutton.png" alt="kontaktbutton"></a>
 
   <script src="./js/jquery-3.6.1.min.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   <script src="./js/script.js"></script>
 
