--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
 
       <div class="heroes_grid_block heroes_grid_block_7">
         <img class="heroes_grid_block_img" src="./i/img/sqwid_transp.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Kaptein</h3>
+        <h3 class="heroes_grid_block_heroes">Squid Game</h3>
       </div>
 
     </div>
@@ -475,8 +475,8 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/pirat_transp.png" alt="Kaptein Sabeltann">
-                  <p>Kaptein Sabeltann</p>
+                  <img src="./i/img/pirat_transp.png" alt="Kaptein">
+                  <p>Kaptein</p>
                 </div>
 
 
@@ -554,7 +554,7 @@
       </div>
     </div>
 
-    <!-- --7. Kaptein -->
+    <!-- --7. Squid Game -->
     <div class="overlayhelter overlayhelter_7">
       <div class="overlayhelter-block">
         <button class="close-button close-button_7">&#10006;</button>
@@ -563,7 +563,7 @@
 
 
 
-          <h2 class="overlayhelter-title">Kaptein</h2>
+          <h2 class="overlayhelter-title">Squid Game</h2>
           <div class="overlayhelter-price">
             <span class="overlayhelter-price-number">500 kr</span>
             <span class="overlayhelter-price-text">pr 1 animatør</span>
@@ -597,20 +597,20 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid1_overlay.png" alt="Helten 1">
-                  <p>Helten 1</p>
+                  <img src="./i/img/sqwid1_overlay.png" alt="Hovudpersonen">
+                  <p>Hovudpersonen</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid2_overlay.png" alt="Helten 2">
-                  <p>Helten 2</p>
+                  <img src="./i/img/sqwid2_overlay.png" alt="Vakt med sirkel">
+                  <p>Vakt med sirkel</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid3_overlay.png" alt="Helten 3">
-                  <p>Helten 3</p>
+                  <img src="./i/img/sqwid3_overlay.png" alt="Vakt med trekant">
+                  <p>Vakt med trekant</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid4_overlay.png" alt="Helten 4">
-                  <p>Helten 4</p>
+                  <img src="./i/img/sqwid4_overlay.png" alt="Vakt med firkant">
+                  <p>Vakt med firkant</p>
                 </div>
 
 
@@ -858,78 +858,75 @@
     <ul class="prices_pack">
 
       <!-- Express -->
-      <div class="grid-1">
-        <li class="prices_pack_block prices_pack_block_1">
-          <p class="prices_pack_block_title prices_pack_block_title_1">Ekspress</p>
-          <p class="prices_pack_block_time">15 min</p>
-          <ul class="prices_pack_block_listin">
-            <li>1 helten</li>
-            <li>3 ballongar</li>
-            <li>Tematisk musikk</li>
-            <li>Danse</li>
-            <li>Bilde med helten</li>
-          </ul>
-          <p class="prices_pack_block_price prices_pack_block_price_1">500 kr</p>
-        </li>
+      <li class="prices_pack_block prices_pack_block_1">
+        <p class="prices_pack_block_title prices_pack_block_title_1">Ekspress</p>
+        <p class="prices_pack_block_time">15 min</p>
+        <ul class="prices_pack_block_listin">
+          <li>1 helten</li>
+          <li>3 ballongar</li>
+          <li>Tematisk musikk</li>
+          <li>Danse</li>
+          <li>Bilde med helten</li>
+        </ul>
+        <p class="prices_pack_block_price prices_pack_block_price_1">500 kr</p>
+      </li>
 
-        <!-- Standart -->
-        <li class="prices_pack_block prices_pack_block_2">
-          <p class="prices_pack_block_title prices_pack_block_title_2">Standart</p>
-          <p class="prices_pack_block_time">1 time/ 10 barn</p>
-          <ul class="prices_pack_block_listin">
-            <li>2 heltar</li>
-            <li>Tematisk musikk</li>
-            <li>Spelar leiker/ stafettar med rekvisitter</li>
-            <li>Pakke opp gaver</li>
-            <li>Discotek med såpeboblergenerator</li>
-            <li>Bilde med heltar</li>
-          </ul>
-          <p class="prices_pack_block_price prices_pack_block_price_2 prices_pack_block_price_2_old">1350 kr</p>
-          <p class="prices_pack_block_price prices_pack_block_price_2">1000 kr</p>
-        </li>
-      </div>
+      <!-- Standart -->
+      <li class="prices_pack_block prices_pack_block_2">
+        <p class="prices_pack_block_title prices_pack_block_title_2">Standart</p>
+        <p class="prices_pack_block_time">1 time/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
+          <li>2 heltar</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar med rekvisitter</li>
+          <li>Pakke opp gaver</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Bilde med heltar</li>
+        </ul>
+        <p class="prices_pack_block_price prices_pack_block_price_2 prices_pack_block_price_2_old">1350 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_2">1000 kr</p>
+      </li>
 
       <!-- Super -->
-      <div class="grid-2">
-        <li class="prices_pack_block prices_pack_block_3">
-          <p class="prices_pack_block_title prices_pack_block_title_3">Super</p>
-          <p class="prices_pack_block_time">1 time/ 10 barn</p>
-          <ul class="prices_pack_block_listin">
-            <li>2 heltar</li>
-            <li>Ansiktmåling</li>
-            <li>Tematisk musikk</li>
-            <li>Spelar leiker/ stafettar med rekvisitter</li>
-            <li>Pakke opp gaver</li>
-            <li>Discotek med såpeboblergenerator</li>
-            <li>Ballongfigur for kvar barn</li>
-            <li>Bilde med heltar</li>
-          </ul>
-          <p class="prices_pack_block_price prices_pack_block_price_3 prices_pack_block_price_3_old">2050 kr</p>
-          <p class="prices_pack_block_price prices_pack_block_price_3 ">1500 kr</p>
-        </li>
+      <li class="prices_pack_block prices_pack_block_3">
+        <p class="prices_pack_block_title prices_pack_block_title_3">Super</p>
+        <p class="prices_pack_block_time">1 time/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
+          <li>2 heltar</li>
+          <li>Ansiktmåling</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar med rekvisitter</li>
+          <li>Pakke opp gaver</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Ballongfigur for kvar barn</li>
+          <li>Bilde med heltar</li>
+        </ul>
+        <p class="prices_pack_block_price prices_pack_block_price_3 prices_pack_block_price_3_old">2050 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_3 ">1500 kr</p>
+      </li>
 
-        <!-- VIP -->
-        <li class="prices_pack_block prices_pack_block_4">
-          <p class="prices_pack_block_title prices_pack_block_title_4">VIP</p>
-          <p class="prices_pack_block_time">2 timar/ 10 barn</p>
-          <ul class="prices_pack_block_listin">
-            <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
-            <li>2 heltar</li>
-            <li>Ansiktmåling</li>
-            <li>Glittertatovering</li>
-            <li>Kurs sjokoladegodteri</li>
-            <li>Tematisk musikk</li>
-            <li>Spelar leiker/ stafettar/ kvestar med rekvisitter</li>
-            <li>Discotek med såpeboblergenerator</li>
-            <li>Pinjata</li>
-            <li>Bilder med heltar</li>
-            <li>Fotosoner</li>
-            <li>Fotograf</li>
-          </ul>
-          <p class="prices_pack_block_price prices_pack_block_price_4 prices_pack_block_price_4_old">4800 kr</p>
-          <p class="prices_pack_block_price prices_pack_block_price_4">3000 kr</p>
-        </li>
-      </div>
+      <!-- VIP -->
+      <li class="prices_pack_block prices_pack_block_4">
+        <p class="prices_pack_block_title prices_pack_block_title_4">VIP</p>
+        <p class="prices_pack_block_time">2 timar/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
+          <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
+          <li>2 heltar</li>
+          <li>Ansiktmåling</li>
+          <li>Glittertatovering</li>
+          <li>Kurs sjokoladegodteri</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar/ kvestar med rekvisitter</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Pinjata</li>
+          <li>Bilder med heltar</li>
+          <li>Fotosoner</li>
+          <li>Fotograf</li>
+        </ul>
+        <p class="prices_pack_block_price prices_pack_block_price_4 prices_pack_block_price_4_old">4800 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_4">3000 kr</p>
+      </li>
+
     </ul>
 
     <p class="prices_avreise">Avreise - frå 200 kr</p>
