--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
 
     <div class="heroes_grid" id="helter-grid">
       <div class="heroes_grid_block heroes_grid_block_1">
-        <img class="heroes_grid_block_img" src="./i/img/superhelter_transp.png" alt="ex">
+        <img class="heroes_grid_block_img heroes_grid_block_img_1" src="./i/img/superhelter_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Superhelter</h3>
 
         </>
@@ -216,11 +216,11 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/spider-overlay.png" alt="Spiderman">
+                  <img src="./i/img/spider-overlay.png" alt="Spiderman" class="overlayimg-spiderman">
                   <p>Spider-Man</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/batman_overlay.png" alt="Batman">
+                  <img src="./i/img/batman_overlay.png" alt="Batman" class="overlayimg-batman">
                   <p>Batman</p>
                 </div>
               </div>
@@ -275,23 +275,23 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/huggy_overlay.png" alt="Huggy Wuggy">
+                  <img src="./i/img/huggy_overlay.png" alt="Huggy Wuggy" class="overlayimg-huggywuggy">
                   <p>Huggy Wuggy</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/kissy_overlay.png" alt="Kissy Missy">
+                  <img src="./i/img/kissy_overlay.png" alt="Kissy Missy" class="overlayimg-kissymissy">
                   <p>Kissy Missy</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/batman_overlay.png" alt="Siren Head">
+                  <img src="./i/img/sirenhead_overlay.png" alt="Siren Head" class="overlayimg-sirenhead">
                   <p>Siren Head</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/amongusgull_overlay.png" alt="Among Us gul">
+                  <img src="./i/img/amongusgull_overlay.png" alt="Among Us gul" class="overlayimg-amongusgul">
                   <p>Among Us gul</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/amongusbla_overlay.png" alt="Among Us blå">
+                  <img src="./i/img/amongusbla_overlay.png" alt="Among Us blå" class="overlayimg-amongusblå">
                   <p>Among Us blå</p>
                 </div>
               </div>
@@ -346,19 +346,19 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/olaf_overlay.png" alt="Olaf">
+                  <img src="./i/img/olaf_overlay.png" alt="Olaf" class="overlayimg-olaf">
                   <p>Olaf</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/grinch_overlay.png" alt="Grinch">
+                  <img src="./i/img/grinch_overlay.png" alt="Grinch" class="overlayimg-grinch">
                   <p>Grinch</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/elsa_overlay.png" alt="Elsa">
+                  <img src="./i/img/elsa_overlay.png" alt="Elsa" class="overlayimg-elsa">
                   <p>Elsa</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/anna_overlay.png" alt="Anna">
+                  <img src="./i/img/anna_overlay.png" alt="Anna" class="overlayimg-anna">
                   <p>Anna</p>
                 </div>
 
@@ -412,15 +412,15 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sky_overlay.png" alt="Sky (Paw Patrol)">
+                  <img src="./i/img/sky_overlay.png" alt="Sky (Paw Patrol)" class="overlayimg-sky">
                   <p>Sky (Paw Patrol)</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/marshal_overlay.png" alt="Marshall (Paw Patrol)">
+                  <img src="./i/img/marshal_overlay.png" alt="Marshall (Paw Patrol)" class="overlayimg-marshall">
                   <p>Marshall (Paw Patrol)</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/enhjørning_overlay.png" alt="Enhjørning">
+                  <img src="./i/img/enhjørning_overlay.png" alt="Enhjørning" class="overlayimg-enhjørning">
                   <p>Enhjørning</p>
                 </div>
 
@@ -475,7 +475,7 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/pirat_transp.png" alt="Kaptein">
+                  <img src="./i/img/pirat_transp.png" alt="Kaptein" class="overlayimg-kaptein">
                   <p>Kaptein</p>
                 </div>
 
@@ -533,11 +533,11 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/boojenta_overlay.png" alt="Bunny Boo (jenta)">
+                  <img src="./i/img/boojenta_overlay.png" alt="Bunny Boo (jenta)" class="overlayimg-bunnyjenta">
                   <p>Bunny Boo (jenta)</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/boogutten_overlay.png" alt="Bunny Boo (gutten)">
+                  <img src="./i/img/boogutten_overlay.png" alt="Bunny Boo (gutten)" class="overlayimg-bunnygutten">
                   <p>Bunny Boo (gutten)</p>
                 </div>
 
@@ -597,19 +597,19 @@
               <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
               <div class="overlayhelter-textblock-grid">
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid1_overlay.png" alt="Hovudpersonen">
+                  <img src="./i/img/sqwid1_overlay.png" alt="Hovudpersonen" class="overlayimg-hovudpersonen">
                   <p>Hovudpersonen</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid2_overlay.png" alt="Vakt med sirkel">
+                  <img src="./i/img/sqwid2_overlay.png" alt="Vakt med sirkel" class="overlayimg-squidsirkel">
                   <p>Vakt med sirkel</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid3_overlay.png" alt="Vakt med trekant">
+                  <img src="./i/img/sqwid3_overlay.png" alt="Vakt med trekant" class="overlayimg-squidtrekant">
                   <p>Vakt med trekant</p>
                 </div>
                 <div class="overlayhelter-textblock-grid-item">
-                  <img src="./i/img/sqwid4_overlay.png" alt="Vakt med firkant">
+                  <img src="./i/img/sqwid4_overlay.png" alt="Vakt med firkant" class="overlayimg-squidfirkant">
                   <p>Vakt med firkant</p>
                 </div>
 
